adicionei um parágrafo

--- a/Site-exemplo/index.html
+++ b/Site-exemplo/index.html
@@ -10,5 +10,7 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nesciunt qui odit expedita quidem, debitis, voluptates, saepe accusantium quasi molestiae sunt? Possimus est unde animi repudiandae adipisci natus voluptates similique?</p>
+    <hr>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam laudantium voluptates illum aliquam nulla modi soluta neque repellendus ipsam quis fugit reprehenderit repudiandae impedit, dolore fuga. Sit obcaecati iure asperiores?</p>
 </body>
 </html>
